Massive update: Content updates, search, responsive, sidebar functionality

--- a/.vuepress/theme/styles/config.styl
+++ b/.vuepress/theme/styles/config.styl
@@ -21,13 +21,14 @@ $lhLarge = 1.8em
 
 // layout
 $navbarHeight = 3.6rem
-$sidebarWidth = 20rem
+$sidebarWidth = 15.5rem
 $contentWidth = 768px
 
-// responsive breakpoints
-$MQNarrow = 959px
-$MQMobile = 719px
-$MQMobileNarrow = 419px
+// breakpoints
+$breakL = 1280px
+$breakM = 999px
+$breakS = 768px
+$breakXS = 499px
 
 // code
 $lineNumbersWrapperWidth = 3.5rem
