--- a/.vuepress/theme/styles/theme.styl
+++ b/.vuepress/theme/styles/theme.styl
@@ -28,9 +28,13 @@ h1
 h2
   font-size $fsRegular
   font-weight 400
-  margin-top 4em
+  padding-top 7em
+  margin-top -3.5em
+  margin-bottom 0
+  line-height 1.2
+  border-bottom 1px solid $textColor
+  display inline-block
 
-n
 h3, h4, h5, h6
   font-size $fsSmall
   margin-bottom 0
@@ -57,8 +61,8 @@ button
   font-size $fsXSmall
   background white
   border 1px dotted $textColor
-  border-radius 12px
-  padding 0.5em 2.5em
+  border-radius 18px
+  padding 0.6em 2.5em
 
   &:hover
     border-color $accentColor
@@ -95,7 +99,7 @@ ul
       display inline-block
 
   &.featured
-    font-size $fsLarge
+    font-size $fsRegular
     line-height $lhRegular
     margin 0
     border-left 1px dotted $accentColor
@@ -138,13 +142,13 @@ div.intro-blocks
 
 .header-anchor
   opacity 0.15
-  margin-left -1.1em
+  margin-left -1.33em
 
   &:hover
     opacity 1
 
 .featured
-  font-size $fsLarge
+  font-size $fsRegular
   line-height $lhMedium
   margin 0
   border-left 1px dotted $accentColor
@@ -194,3 +198,69 @@ p+.iframe-container
 
 span.arrow
   margin-right 0.75em
+
+/* Responsive Adjustments */
+#wrapper
+  &:not(.has-sidebar):not(.sidebar-open)
+    .sidebar
+      display none
+
+@media screen and (max-width $breakL)
+  #wrapper
+    &:not(.has-sidebar):not(.sidebar-open)
+      .sidebar
+        display none
+
+    &.has-sidebar
+      div.page
+        max-width "calc(100vw - %s - 15em)" % $sidebarWidth
+
+  footer.footer
+    margin-left 2.75em
+
+@media screen and (max-width $breakM)
+  .md-hide
+    display none !important
+
+  #wrapper:not(.has-sidebar)
+    div.page, footer.footer
+      margin-left auto
+      margin-right auto
+      max-width 85vw
+
+  #wrapper.has-sidebar
+    div.page
+      margin-left 2.75em
+      max-width "calc(100vw - %s - 8em)" % $sidebarWidth
+
+  footer.footer
+    margin-bottom 8em
+
+    ul
+      li
+        padding 0
+        display block
+
+@media screen and (max-width $breakS)
+  .sm-hide
+    display none !important
+
+  #wrapper.has-sidebar
+    div.page, footer.footer
+      margin-left auto
+      margin-right auto
+      max-width 85vw
+
+  div.intro-blocks
+    ul
+      width calc(100vw - 4em)
+      padding 0 1.4em
+
+@media screen and (max-width $breakXs)
+  .xs-hide
+    display none !important
+
+  button.announcement
+    left 2em
+    right 2em
+    width calc(100vw - 4em)
