--- a/.vuepress/theme/styles/theme.styl
+++ b/.vuepress/theme/styles/theme.styl
@@ -199,6 +199,12 @@ p+.iframe-container
 span.arrow
   margin-right 0.75em
 
+table
+  th
+    text-align left
+  td
+    padding-right 2em
+
 /* Responsive Adjustments */
 #wrapper
   &:not(.has-sidebar):not(.sidebar-open)
@@ -258,6 +264,11 @@ span.arrow
       margin-left auto
       margin-right auto
       max-width 85vw
+
+  .iframe-container
+    iframe
+      filter grayscale(0)
+      opacity 1
 
   div.intro-blocks
     ul
