--- a/.vuepress/theme/styles/config.styl
+++ b/.vuepress/theme/styles/config.styl
@@ -2,8 +2,11 @@
 $defaultFont = 'Work-Sans'
 
 // colors
+$bgDark = rgb(29,29,29)
 $accentColor = rgb(28,28,225)
+$accentColorDark = rgb(42,97,255)
 $textColor = rgb(20,20,20)
+$textColorDark = rgb(180,180,180)
 $subduedColor = rgb(180,180,180)
 $borderColor = $accentColor
 $codeBgColor = #282c34
