Responsive adjustments, esp for smaller phones (SE)

--- a/.vuepress/theme/styles/config.styl
+++ b/.vuepress/theme/styles/config.styl
@@ -32,6 +32,7 @@ $breakL = 1280px
 $breakM = 999px
 $breakS = 768px
 $breakXS = 499px
+$breakXXS = 356px
 
 // code
 $lineNumbersWrapperWidth = 3.5rem
