--- a/.vuepress/theme/styles/theme.styl
+++ b/.vuepress/theme/styles/theme.styl
@@ -266,6 +266,12 @@ table
     border-color $accentColorDark
   a.header-anchor
     color $textColorDark
+  footer.footer a
+    color $subduedColor
+    opacity 0.5
+    &:hover
+      color $accentColorDark
+      opacity 1
 
 /* Responsive Adjustments */
 #wrapper
