Adjust buttons, separate styles

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -70,6 +70,7 @@ button
   border 1px dotted $textColor
   border-radius 18px
   padding 0.6em 2.5em
+  cursor pointer
 
   &:hover
     border-color $accentColor
@@ -215,175 +216,5 @@ table
   td
     padding-right 2em
 
-/* Dark Mode */
-.show-dark
-  display none !important
-
-#wrapper.dark-mode
-  background $bgDark
-  color $textColorDark
-  .show-dark
-    display block !important
-  .hide-dark
-    display none !important
-  a, .accent
-    color $accentColorDark
-  button
-    border-color $textColorDark
-    color $textColorDark
-    background $bgDark
-    &.announcement a
-      color $textColorDark
-      &:hover
-        color $accentColorDark
-  h2
-    border-bottom 1px solid $textColorDark
-  header
-    background $bgDark
-  .search-box
-    input
-      border-color $textColorDark
-      color $textColorDark
-      background-color $bgDark
-      background-image url(../images/icon-search-white.svg)
-  ul
-    list-style-image url(../images/dash-white.svg)
-    li.highlight
-      background-image url(../images/highlight-dark.svg)
-  .suggestions
-    border-color $textColorDark
-    background-color $bgDark
-    .suggestion
-      a
-        color $textColorDark
-      &.focused
-        background-color lighten($bgDark, 5%)
-        a
-          color $accentColorDark
-  .sidebar-button
-    svg
-      stroke $textColorDark
-  .sidebar
-    background $bgDark
-    border-color $accentColorDark
-    ul
-      list-style-image none
-  nav.nav-links, ul.sidebar-links
-    a
-      color $subduedColor
-      &.router-link-active, &.active
-        color $accentColorDark
-  .featured
-    border-color $accentColorDark
-  a.header-anchor
-    color $textColorDark
-  footer.footer a
-    color $subduedColor
-    opacity 0.5
-    &:hover
-      color $accentColorDark
-      opacity 1
-
-/* Responsive Adjustments */
-#wrapper
-  &:not(.has-sidebar):not(.sidebar-open)
-    .sidebar
-      display none
-
-@media screen and (min-width $breakL)
-  .lg-up-hide
-    display none !important
-
-@media screen and (min-width $breakM)
-  .md-up-hide
-    display none !important
-
-@media screen and (max-width $breakL)
-  #wrapper
-    &:not(.has-sidebar):not(.sidebar-open)
-      .sidebar
-        display none
-
-    &.has-sidebar
-      div.page
-        max-width "calc(100vw - %s - 15em)" % $sidebarWidth
-
-  footer.footer
-    padding-left 2.75em
-
-@media screen and (max-width $breakM)
-  .md-hide
-    display none !important
-
-  .page
-    padding-top 6em
-
-  #wrapper.dark-mode.sidebar-open
-    header
-      border-bottom 1px dotted $accentColorDark
-
-  #wrapper:not(.has-sidebar)
-    div.page, footer.footer
-      margin-left auto
-      margin-right auto
-      max-width 85vw
-
-    footer.footer
-      padding-left 0
-      padding-right 0
-
-  #wrapper.has-sidebar
-    div.page
-      margin-left 2.75em
-      max-width "calc(100vw - %s - 8em)" % $sidebarWidth
-
-  footer.footer
-    padding-bottom 8em
-
-    ul
-      li
-        padding 0
-        display block
-
-  .search-box
-    margin-right 0.5em
-
-@media screen and (max-width $breakS)
-  .sm-hide
-    display none !important
-
-  #wrapper.has-sidebar
-    div.page, footer.footer
-      margin-left auto
-      margin-right auto
-      max-width 85vw
-
-  .iframe-container
-    iframe
-      filter grayscale(0)
-      opacity 1
-
-  div.intro-blocks
-    ul
-      width calc(100vw - 4em)
-      padding 0 1.4em
-
-@media screen and (max-width $breakXs)
-  .xs-hide
-    display none !important
-
-  button.announcement
-    left 2em
-    right 2em
-    width calc(100vw - 4em)
-
-@media screen and (max-width $breakXXS)
-  body
-    font-size 16px
-
-  .content-block
-    padding 0 1em
-
-  button.announcement
-    right 1em !important
-    left 1em !important
+@require './dark'
+@require './responsive'
