--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -82,7 +82,7 @@ button
   &.announcement a
     color $textColor
 
-.content-block
+.content, .content-block
   max-width 996px
   margin 0 auto
   padding 0 2em
