Fix wrapper for first load

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -169,7 +169,7 @@ div.intro-blocks
   padding-left 1em
   margin-left -1em
 
-div.wrapper:not(.home)>.content, .page
+div#wrapper:not(.home)>.content, .page
   font-size $fsSmall
   line-height $lhLarge
   max-width $contentWidth
