--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -5,6 +5,8 @@
 #wrapper.dark-mode
   background $bgDark
   color $textColorDark
+  .text-color, a.text-color
+    color $textColorDark !important
   .show-dark
     display block !important
   .hide-dark
@@ -24,6 +26,15 @@
     border-bottom 1px solid $textColorDark
   header
     background $bgDark
+  div.intro-blocks
+    a
+      ul
+        li
+          color $textColorDark
+          &:first-child
+            color $accentColorDark
+          &.highlight
+            background-image url(../images/highlight-dark.svg)
   .search-box
     input
       border-color $textColorDark
