Add logo to header, address #107

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -82,6 +82,10 @@ button
   &.announcement a
     color $textColor
 
+#wrapper.home
+  .hide-home
+    display none
+
 #wrapper.home>div.content, .content-block
   max-width 996px
   margin 0 auto
