Adjust button styling (#109)

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -18,6 +18,9 @@ body
   line-height $lhRegular
   color $textColor
 
+button
+  font-family $defaultFont, -apple-system, "Helvetica Neue", sans-serif
+
 #wrapper
   min-height 100vh
 
