Add subsection links to landing

--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -13,6 +13,8 @@
     display none !important
   a, .accent
     color $accentColorDark
+    &.black
+      color $textColorDark
   button
     border-color $textColorDark
     color $textColorDark
