--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -78,7 +78,7 @@
       opacity 1
 
   div.intro-blocks
-    a
+    .intro-block
       width calc(100vw - 4em)
       padding 0 1.4em
 
@@ -90,9 +90,6 @@
     left 2em
     right 2em
     width calc(100vw - 4em)
-
-  div.intro-blocks
-    background red
 
 @media screen and (max-width $breakXXS)
   body
