--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -35,7 +35,7 @@ h1
 h2
   font-size $fsRegular
   font-weight 400
-  padding-top 4em
+  padding-top 4.3em
   margin-top -1em
   margin-bottom 0
   line-height 1.2
@@ -66,6 +66,9 @@ a
 
   .icon.outbound
     display none
+
+  &.black
+    color $textColor
 
 .pointer
   cursor pointer
@@ -140,12 +143,12 @@ ul
         display block
         font-size $fsSmall
 
-div.intro-blocks
+.intro-blocks
   margin-top 4em
   display flex
   flex-wrap wrap
 
-  a
+  .intro-block
     display inline-block
     line-height $lhMedium
     margin 0
