Add videos, load in landing, enable top nav on home

--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -9,6 +9,8 @@
     color $textColorDark !important
   .show-dark
     display block !important
+    &.inline-block
+      display inline-block !important
   .hide-dark
     display none !important
   a, .accent
