Adjust zindex issues, fix mobile width, add credits and adjust styling

--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -76,9 +76,17 @@
     border-color $accentColorDark
   a.header-anchor
     color $textColorDark
-  footer.footer a
+
+  footer.footer
     color $subduedColor
     opacity 0.5
+
+    &:hover
+      opacity 1
+      color $textColorDark
+
+  footer.footer a
+    color $subduedColor
     &:hover
       color $accentColorDark
       opacity 1
