--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -82,6 +82,12 @@
       width calc(100vw - 4em)
       padding 0 1.4em
 
+  div.credits
+    margin-bottom 2em !important
+
+  div.hero
+    margin-top 90px
+
 @media screen and (max-width $breakXs)
   .xs-hide
     display none !important
