Adjust bg for srgb compatible browsers in dark mode

--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -90,3 +90,10 @@
     &:hover
       color $accentColorDark
       opacity 1
+
+@media screen and (color-gamut: srgb)
+  body, #wrapper.dark-mode
+    background $bgDarkSRGB
+
+    button, header, .sidebar, .search-box input, .suggestions
+      background $bgDarkSRGB
