--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -3,6 +3,7 @@ $defaultFont = 'Work-Sans'
 
 // colors
 $bgDark = rgb(29,29,29)
+$bgDarkSRGB = rgb(32,32,32)
 $accentColor = rgb(28,28,225)
 $accentColorDark = rgb(42,97,255)
 $textColor = rgb(20,20,20)
