--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -92,7 +92,7 @@
       opacity 1
 
 @media screen and (color-gamut: srgb)
-  body, #wrapper.dark-mode
+  #wrapper.dark-mode
     background $bgDarkSRGB
 
     button, header, .sidebar, .search-box input, .suggestions
