Attempt to adjust srgb media query to prevnet on mobile

--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -91,7 +91,7 @@
       color $accentColorDark
       opacity 1
 
-@media screen and (color-gamut: srgb)
+@media screen and (color-gamut: srgb) and (hover: hover)
   #wrapper.dark-mode
     background $bgDarkSRGB
 
