Attempt to fix safari bug

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -236,5 +236,12 @@ table
   td
     padding-right 2em
 
+.fade-enter-active, .fade-leave-active
+  transition opacity .25s
+
+.fade-enter, .fade-leave-to
+  opacity: 0
+
+
 @require './dark'
 @require './responsive'
