Adjustment for chrome dark bg

--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -102,7 +102,7 @@
 /* CSS Hack for Chrome background discrepancy */
 @media screen and (-webkit-min-device-pixel-ratio:0) and (min-resolution:.001dpcm)
   #wrapper.dark-mode
-    background $bgDark
+    background $bgDarkChrome
 
     button, header, .sidebar, .search-box input, .suggestions
-      background $bgDark
+      background $bgDarkChrome
