--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -4,6 +4,7 @@ $defaultFont = 'Work-Sans'
 // colors
 $bgDark = rgb(29,29,29)
 $bgDarkSRGB = rgb(33,31,33)
+$bgDarkChrome = rgb(30,28,30)
 $accentColor = rgb(28,28,225)
 $accentColorDark = rgb(42,97,255)
 $textColor = rgb(20,20,20)
