--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -204,6 +204,20 @@ span.arrow
           background url(../images/highlight.svg)
           background-repeat no-repeat
 
+.gettingstarted
+  margin-top 80px
+  padding 4em
+
+  .center
+    h1
+      font-weight 700
+    h2
+      border-bottom none
+      padding-top 0
+    .try-button
+      margin 2em
+      font-size $fsRegular
+
 .header-anchor
   opacity 0.15
   margin-left -1.33em
