--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -89,6 +89,12 @@
   div.hero
     margin-top 90px
 
+  div.gettingstarted
+    padding 4em 2em
+    .center
+      .terminal-gif img,h2
+        max-width 100%
+
 @media screen and (max-width $breakXs)
   .xs-hide
     display none !important
