--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -211,12 +211,20 @@ span.arrow
   .center
     h1
       font-weight 700
+      line-height 1.6em
     h2
       border-bottom none
       padding-top 0
+      line-height 1.4em
+      max-width 85%
     .try-button
       margin 2em
       font-size $fsRegular
+      font-weight 700
+    .terminal-gif
+      margin-top 3em
+      img
+        max-width: 85%
 
 .header-anchor
   opacity 0.15
