Adds placeholder terminal gif

--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -92,7 +92,7 @@
   div.gettingstarted
     padding 4em 2em
     .center
-      .terminal-gif img,h2
+      .terminal-gif,h2
         max-width 100%
 
 @media screen and (max-width $breakXs)
