Renames to get started and adds templates

--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -89,11 +89,13 @@
   div.hero
     margin-top 90px
 
-  div.gettingstarted
-    padding 4em 2em
+  div.getstarted
+    padding 4em 0
     .center
-      .terminal-gif,h2
+      .terminal-gif,h2, h2.bold,.features .feature
         max-width 100%
+      .features .feature
+        margin-bottom 4em
 
 @media screen and (max-width $breakXs)
   .xs-hide
