Finishes first pass

--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -96,6 +96,8 @@
         max-width 100%
       .features .feature
         margin-bottom 4em
+      .learn p
+        max-width 100%
 
 @media screen and (max-width $breakXs)
   .xs-hide
