Update homepage sections to use headers

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -12,11 +12,13 @@ $borderColor = $accentColor
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
 
+// typical browser default font size is 16px
 // font sizes
-$fsXSmall = 12px
-$fsSmall = 15px
-$fsRegular = 18px
-$fsLarge = 24px
+$fsXSmall = 0.75rem // 12px
+$fsSmall = 0.875rem // 14px
+$fsRegular = 1.125rem // 18px
+$fsLarge = 1.25rem // 20px
+$fsXLarge = 1.5rem // 24px
 
 $lhRegular = 1.2em
 $lhMedium = 1.5em
