--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -26,7 +26,7 @@ button
   min-height 100vh
 
 h1
-  font-size $fsLarge
+  font-size $fsXLarge
   font-weight 400
   margin-bottom 1.5em
 
@@ -34,16 +34,27 @@ h1
     display none
 
 h2
-  font-size $fsRegular
+  font-size $fsLarge
   font-weight 400
-  padding-top 4.3em
-  margin-top -1em
-  margin-bottom 0
+  margin-top 2em
   line-height 1.2
   border-bottom 1px solid $textColor
   display inline-block
 
-h3, h4, h5, h6
+h3
+  font-size $fsRegular
+  margin-top 2em
+
+  a.header-anchor
+    display none
+
+  &+ul
+    margin-top 0
+
+  em
+    font-weight 400
+
+h4, h5, h6
   font-size $fsSmall
   margin-bottom 0
   margin-top 2em
@@ -144,29 +155,27 @@ ul
         display block
         font-size $fsSmall
 
+span.arrow
+  margin-right 0.75em
+
 .intro-blocks
-  margin-top 4em
+  margin-top 1.5em
   display flex
   flex-wrap wrap
 
   .intro-block
     display inline-block
     line-height $lhMedium
-    margin 0
-    margin-bottom 2em
+    margin-bottom 1em
     width 49%
+
+    h3
+      span.arrow
+        margin-right 1.25em
 
     ul
       li
         color $textColor
-
-        &:first-child
-          color $accentColor
-          margin-bottom 1em
-          list-style-image none
-          list-style none
-          padding 0
-          text-indent -1em
 
         &.highlight
           background url(../images/highlight.svg)
@@ -227,9 +236,6 @@ div#wrapper:not(.home)>.content, .page
 
 p+.iframe-container
   margin-top -1em
-
-span.arrow
-  margin-right 0.75em
 
 table
   th
