Update dark mode menu color [Fixes #252]

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -11,6 +11,7 @@ $subduedColor = rgb(180,180,180)
 $borderColor = $accentColor
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
+$white = #fff
 
 // typical browser default font size is 16px
 // font sizes
