Add left-to-right-text styles

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -269,5 +269,12 @@ table
   .headline-subtitle
     text-align left
 
+.right-to-left-text
+  .header-anchor
+    margin-left 0
+
+  li.highlight
+    background-position: right !important
+
 @require './responsive'
 @require './dark'
