Add /languages page [Resolves #258]

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -9,6 +9,8 @@ $textColor = rgb(20,20,20)
 $textColorDark = rgb(180,180,180)
 $subduedColor = rgb(180,180,180)
 $borderColor = $accentColor
+$lightBorderColor = #ececec
+$lightBorderColorDark = #404040
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
 $white = #fff
