Update body font-size to 1rem [Fixes #290]

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -104,6 +104,9 @@ button
   .hide-home
     display none
 
+  h1
+    font-size $fsLarge
+
 #wrapper.home>div.content, .content-block
   max-width 996px
   margin 0 auto
@@ -199,7 +202,7 @@ span.arrow
   margin-left -1em
 
 div#wrapper:not(.home)>.content, .page
-  font-size $fsSmall
+  font-size $fsMedium
   line-height $lhLarge
   max-width $contentWidth
   margin-left 10em
