--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -17,9 +17,10 @@ $white = #fff
 // font sizes
 $fsXSmall = 0.75rem // 12px
 $fsSmall = 0.875rem // 14px
+$fsMedium = 1rem // 16px
 $fsRegular = 1.125rem // 18px
-$fsLarge = 1.25rem // 20px
-$fsXLarge = 1.5rem // 24px
+$fsLarge = 1.5rem // 20px
+$fsXLarge = 2rem // 24px
 
 $lhRegular = 1.2em
 $lhMedium = 1.5em
