Fix header overlaps in-page anchors

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -228,6 +228,10 @@ div#wrapper:not(.home)>.content, .page
   margin-left 10em
   padding-top 9em
 
+  h2
+    padding-top 4em
+    margin-top -1em
+
   p
     margin-bottom 2em
 
