Move content to StartBuildingPage component

--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -89,7 +89,7 @@
   div.hero
     margin-top 90px
 
-  div.getstarted
+  div.start-building
     padding 4em 0
     .center
       .terminal-gif,h2, h2.bold,.features .feature
