Update button to a tag [Fixes #184]

--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -92,7 +92,7 @@
   .xs-hide
     display none !important
 
-  button.announcement
+  .button.announcement
     left 2em
     right 2em
     width calc(100vw - 4em)
@@ -104,6 +104,6 @@
   .content-block
     padding 0 1em
 
-  button.announcement
+  .button.announcement
     right 1em !important
     left 1em !important
