--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -17,7 +17,7 @@
     color $accentColorDark
     &.black
       color $textColorDark
-  button
+  .button
     border-color $textColorDark
     color $textColorDark
     background $bgDark
