Update /languages styles

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -125,9 +125,6 @@ a
   .hide-home
     display none
 
-  h1
-    font-size $fsLarge
-
 #wrapper.home>div.content, .content-block
   max-width 996px
   margin 0 auto
@@ -303,6 +300,15 @@ table
 
   li.highlight
     background-position: right !important
+
+// /languages page
+.languages-page
+    font-size $fsMedium
+    line-height $lhLarge
+    padding-top 9em
+
+.languages-content-section
+  max-width $contentWidth
 
 @require './responsive'
 @require './dark'
