Add translations for "last updated" [Fixes #378]

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -301,6 +301,9 @@ table
   li.highlight
     background-position: right !important
 
+  .updated-date
+    text-align right
+
 // /languages page
 .languages-page
     font-size $fsMedium
