Slight box shadow

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -14,6 +14,8 @@ $lightBorderColorDark = #404040
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
 $white = #fff
+$boxShadowColor = rgba(0,0,0,0.12)
+$boxShadowHoverColor = rgba(0,0,0,0.24)
 
 // typical browser default font size is 16px
 // font sizes
