Generalize border & shadow classes

--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -105,3 +105,10 @@
     &:hover
       color $accentColorDark
       opacity 1
+
+  // borders & shadows
+  .border-box-shadow
+    border 1px dotted $lightBorderColorDark
+
+  .border-box-shadow-hover
+    border 1px dotted $lightBorderColorDark
