Align date text right to left for Arabic

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -304,7 +304,7 @@ table
     margin-left 0
 
   li.highlight
-    background-position: right !important
+    background-position right !important
 
   .updated-date
     text-align right
