Add XL-friendly, configurable layout. (#636)
* Add XL-friendly layout. This includes centering content Medium-style and
keeping the footer always at least at the bottom of the page.

* Add sidebar centering

* Add use of  instead of 1280px

* Delete .Layout.vue.swp

* Add alignment change only when sidebar is present

* Make more consistent margins

* Variables

* Fix variable stuff

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -42,6 +42,9 @@ $breakS = 768px
 $breakXS = 499px
 $breakXXS = 356px
 
+// sizes
+$contentWidthL = 1140px;
+
 // code
 $lineNumbersWrapperWidth = 3.5rem
 $codeLang = js ts html md vue css sass scss less stylus go java c sh yaml py
