Clean up XL layout [Fixes #207] (#639)

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -43,7 +43,7 @@ $breakXS = 499px
 $breakXXS = 356px
 
 // sizes
-$contentWidthL = 1140px;
+$contentWidthXL = 1440px;
 
 // code
 $lineNumbersWrapperWidth = 3.5rem
