--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -133,6 +133,10 @@ ul
   li
     padding-left 0.5em
 
+    &.highlight
+          background url(../images/highlight.svg)
+          background-repeat no-repeat
+
   &.inline, &.nav-ul
     li
       padding 0
