updated to system font stack [fixes #756]

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -1,4 +1,3 @@
-@require './fonts'
 @require './arrow'
 @require './config'
 @require './utils'
@@ -12,7 +11,7 @@ body, html
   overflow-x hidden
 
 body
-  font-family $defaultFont, -apple-system, "Helvetica Neue", sans-serif
+  font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
   font-size $fsRegular
@@ -20,7 +19,8 @@ body
   color $textColor
 
 .button
-  font-family $defaultFont, -apple-system, "Helvetica Neue", sans-serif
+  font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+
 
 #wrapper
   min-height 100vh
