updated icon component to handle darkmode. Updated dark/darkmode props to a typed isDarkMode prop

--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -71,13 +71,17 @@
       color $accentColorDark
 
       svg
-        fill $accentColorDark
+        path
+          fill $accentColorDark
 
     &.router-link-active
       color $accentColorDark
+      path
+        fill $accentColorDark
 
     svg
-      fill $subduedColor
+      path
+        fill $subduedColor
 
   .router-link-active
     svg
