--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -90,17 +90,20 @@ a
     color $accentColor
 
     svg
-      fill $accentColor
+      path
+        fill $accentColor
 
   &.router-link-active
     color $accentColor
 
   svg
-    fill $subduedColor
+    path
+      fill $subduedColor
 
 .router-link-active
   svg
-    fill $accentColor
+    path
+      fill $accentColor
 
 .pointer
   cursor pointer
