updated icon component to accept *classes* instead of colors. Styled using css where called (svg path { fill: $... }). Also removed superfluous navigation classes

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -2,6 +2,7 @@
 $defaultFont = 'Work-Sans'
 
 // colors
+$black = rgb(0,0,0)
 $bgDark = rgb(34,34,34)
 $accentColor = rgb(28,28,225)
 $accentColorDark = rgb(42,97,255)
