fixed svg lightmode/darkmode versions

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -129,7 +129,7 @@ ol
 ul
   padding 0
   margin 1em
-  list-style-image url(../images/dash-white.svg)
+  list-style-image url(../images/dash.svg)
   li
     padding-left 0.5em
 
@@ -179,7 +179,7 @@ ul
         color $textColor
 
         &.highlight
-          background-image: url(../images/highlight-dark.svg)
+          background-image: url(../images/highlight.svg)
           background-repeat no-repeat
 
   // TODO remove once translations are updated w/ new personas
