Update HomePage to depend on contentVersion

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -162,7 +162,7 @@ ul
   flex-wrap wrap
 
   .intro-block,
-  .intro-block-nonenglish
+  .intro-block-content-version-1
     flex 1 1 29%
     padding-left 1em
     padding-right 1em
@@ -183,7 +183,7 @@ ul
           background-repeat no-repeat
 
   // TODO remove once translations are updated w/ new personas
-  .intro-block-nonenglish
+  .intro-block-content-version-1
     flex 1 1 40%
     padding-left 2em
     padding-right 2em
