Added new buttons [fixes #757]

--- a/docs/.vuepress/theme/styles/dark.styl
+++ b/docs/.vuepress/theme/styles/dark.styl
@@ -2,7 +2,7 @@
 .show-dark
   display none !important
 
-#wrapper.dark-mode
+.dark-mode
   background $bgDark
   color $textColorDark
   .text-color, a.text-color
@@ -17,14 +17,6 @@
     color $accentColorDark
     &.black
       color $textColorDark
-  .button
-    border-color $textColorDark
-    color $textColorDark
-    background $bgDark
-    color $textColorDark
-    &:hover
-      border-color $accentColorDark
-      color $accentColorDark
   h2
     border-bottom 1px solid $textColorDark
   header
