implemented updated color system [fixes #760]

--- a/docs/.vuepress/theme/styles/responsive.styl
+++ b/docs/.vuepress/theme/styles/responsive.styl
@@ -35,7 +35,7 @@
 
   #wrapper.dark-mode.sidebar-open
     header
-      border-bottom 1px dotted $accentColorDark
+      border-bottom 1px dotted $colorPrimaryDark500
 
   #wrapper:not(.has-sidebar)
     main.page, footer.footer
