increased white color steps, added contrast to page-updated class

--- a/docs/.vuepress/theme/styles/config.styl
+++ b/docs/.vuepress/theme/styles/config.styl
@@ -11,10 +11,10 @@ $colorFail = rgb(184,0,0)
 $legacyBgDark = rgb(34,34,34)
 
 // white mixes (for light grays)
-$colorWhite900 = mix($colorBlack, $colorWhite, 12%)
-$colorWhite800 = mix($colorBlack, $colorWhite, 9%)
-$colorWhite700 = mix($colorBlack, $colorWhite, 6%)
-$colorWhite600 = mix($colorBlack, $colorWhite, 3%)
+$colorWhite900 = mix($colorBlack, $colorWhite, 30%)
+$colorWhite800 = mix($colorBlack, $colorWhite, 20%)
+$colorWhite700 = mix($colorBlack, $colorWhite, 10%)
+$colorWhite600 = mix($colorBlack, $colorWhite, 5%)
 $colorWhite500 = $colorWhite
 
 // black mixes (for dark grays)
@@ -72,10 +72,9 @@ $colorFail100 = mix($colorWhite, $colorFail, 80%)
 
 // LEGACY COLORS
 $colorBgDark = $legacyBgDark
-$colorPrimary = rgb(28,28,225)
-$textColor = rgb(20,20,20)
-$textColorDark = rgb(180,180,180)
-$subduedColor = rgb(180,180,180)
+$textColor = $colorBlack300
+$textColorDark = $colorWhite600
+$subduedColor = $colorWhite900
 $borderColor = $colorPrimary
 $lightBorderColor = #ececec
 $lightBorderColorDark = #404040
